--- a/vue-jquery/examples/package.json
+++ b/vue-jquery/examples/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:vue": "parcel ./vue/index.html"
+    "start:vue": "parcel ./vue/index.html",
+    "start:jquery": "parcel ./jquery/index.html"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
@@ -12,9 +13,15 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "highlight.js": "^9.15.8",
+    "highlightjs": "^9.12.0",
     "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
     "vue": "^2.6.10",
-    "vue-hot-reload-api": "^2.3.3"
+    "vue-highlightjs": "^1.3.3",
+    "vue-hot-reload-api": "^2.3.3",
+    "vue2-leaflet": "^2.2.1"
   }
 }
