--- a/vue-jquery/examples/package.json
+++ b/vue-jquery/examples/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start:vue": "parcel ./vue/index.html",
-    "start:jquery": "parcel ./jquery/index.html"
+    "start:vue-sade": "parcel ./vue-sade/index.html"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.27",
     "highlight.js": "^9.15.8",
     "highlightjs": "^9.12.0",
     "jquery": "^3.4.1",
@@ -22,6 +23,7 @@
     "vue": "^2.6.10",
     "vue-highlightjs": "^1.3.3",
     "vue-hot-reload-api": "^2.3.3",
-    "vue2-leaflet": "^2.2.1"
+    "vue2-leaflet": "^2.2.1",
+    "vuex": "^3.1.1"
   }
 }
