--- a/vue-jquery/examples/package.json
+++ b/vue-jquery/examples/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.6.10",
     "vue-highlightjs": "^1.3.3",
     "vue-hot-reload-api": "^2.3.3",
+    "vue-json-pretty": "^1.6.0",
     "vue2-leaflet": "^2.2.1",
     "vuex": "^3.1.1"
   }
